2005-05-01  Alex Roitman  <shura@gramps-project.org>
	* src/EditPerson.py (on_help_clicked): Call appropriate manual section.
	* doc/gramps-manual/C/usage.xml: Update.
	* doc/gramps-manual/C/figures/edit-person-*.png: Update.
	* configure.in: Bump up version, to distinguish from released 1.1.99.

2005-05-01  Don Allingham  <don@gramps-project.org>
	* src/po/template.po: updated for string changes
	* src/Date.py: add the ui_calendar_names for translation for the ui
	* src/DateEdit.py: use the new ui_calendar_names for the ui
	* src/plugins/Check.py: delete families that contain only a
	single parent and no children

2005-05-01  Eero Tamminen  <eerot@sf>
	* src/dates/Date_fi.py: Fixed Display class + other changes.
	  Parser is waiting for Gramps DateParser.py update

2005-04-28  Alex Roitman  <shura@gramps-project.org>
	* src/EditPlace.py (on_add_url_clicked,on_update_url_clicked):
	Use empty name when not available.
	* src/UrlEdit.py (__init__): Work with empty names.

2005-04-29  Eero Tamminen  <eerot@sf>
	* src/dates/Date_fi.py: initial Finnish date parser, doesn't yet
	  work correctly
	* src/dates/Makefile.am: Added Date_fi.py
	* src/po/fi.po: Updated translation from template.po + some fixes

2005-04-28  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: fix adding child to wrong family

2005-04-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps_main.py (__init__): Avoid TypeError in schema error
	message
	* src/StartupDialog.py (__init__): Catch Schema errors

2005-04-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EditPerson.py (on_apply_person_clicked): Fix crash when
	changing gender caused by a family handle/object mismatch
	
	* src/MergePeople.py: Corrected gender display (closes #1190203)

2005-04-25  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/FamilyView.py: Dont crash on empty database

2005-04-24  Don Allingham  <don@gramps-project.org>
	* src/gramps.glade: remove REDO menu item

2005-04-24  Eero Tamminen  <eerot@sf>