@@ -1,3 +1,8 @@
+2005-05-02  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/gramps_main.py: Disable fast merge on a readonly db
+	* src/plugins/Check.py: Disable on readonly db
+	* src/plugins/TestcaseGenerator.py: Disable on readonly db
+	
 2005-05-01  Alex Roitman  <shura@gramps-project.org>
 	* src/EditPerson.py (on_help_clicked): Call appropriate manual section.
 	* doc/gramps-manual/C/usage.xml: Update.
